@@ -28,11 +28,19 @@
 #include <vlad/symtab.h>
 #include <vlad/fact.h>
 
-/* a list of facts. no checking. */
+/* class for traversing */
+class vlad_expression_trav : public vlad_list_trav
+{
+  public :
 
+    virtual int trav(vlad_fact *a_fact) = 0;
+} ;
+
+/* a list of facts. no checking. */
 class vlad_expression : public vlad_list
 {
   public :
+
     vlad_expression();
     ~vlad_expression();
 
@@ -73,6 +81,11 @@ class vlad_expression : public vlad_list
     /* assumimg s has enough memory allocation */
     void print(char *a_str);
 #endif
+
+  private :
+
+    /* called by vlad_list::traverse() */
+    int trav(vlad_list_item *a_item, vlad_list_trav *a_trav);
 } ;
 
 #endif
