@@ -10,6 +10,10 @@
 
 	* lib/numberlist.cpp :
 	* lib/numberlist.h :
+	* lib/stringlist.cpp :
+	* lib/stringlist.h :
+	* lib/expression.cpp :
+	* lib/expression.h :
 
 	  - Added traverse functionality.
 
